@@ -18037,6 +18037,9 @@ int util_extract_tzx(char *filename,char *tempdirectory,char *tapfile)
 
 		z80_byte *copia_puntero;
 
+    int archivo_tzx_tiene_scr=0;
+    char primer_bloque_basic[PATH_MAX]="";
+
 	while(total_mem>0 && !salir) {
 
 		z80_byte tzx_id=*puntero_lectura;
@@ -18119,6 +18122,7 @@ int util_extract_tzx(char *filename,char *tempdirectory,char *tapfile)
 			extension_agregar[0]=0; //Por defecto
 
                         int era_pantalla=0;
+                        int era_basic=0;
 
 			//Si bloque de flag 255, ver si corresponde al bloque anterior de flag 0
 			if (flag==255 && previo_flag==0 && previo_longitud_segun_cabecera==longitud_final) {
@@ -18126,6 +18130,7 @@ int util_extract_tzx(char *filename,char *tempdirectory,char *tapfile)
 				if (previo_tipo_bloque==0) {
 					//Basic
 					strcpy(extension_agregar,".bas");
+                    era_basic=1;
 				}
 
 
@@ -18138,6 +18143,7 @@ int util_extract_tzx(char *filename,char *tempdirectory,char *tapfile)
                 strcpy(extension_agregar,".scr");
                 //y ademas decimos que ese es el achivo de pantalla usado en los previews
                 era_pantalla=1;
+                archivo_tzx_tiene_scr=1;
             }
 
 
@@ -18152,6 +18158,12 @@ int util_extract_tzx(char *filename,char *tempdirectory,char *tapfile)
 
                                         //Meter en archivo MENU_SCR_INFO_FILE_NAME la ruta al archivo de pantalla
                                         util_save_file((z80_byte *)buffer_temp_file,strlen(buffer_temp_file)+1,buff_preview_scr);
+                                }
+
+                                if (era_basic) {
+                                    if (primer_bloque_basic[0]==0) {
+                                        strcpy (primer_bloque_basic,buffer_temp_file);
+                                    }
                                 }
                         }
 		}
@@ -18291,6 +18303,24 @@ int util_extract_tzx(char *filename,char *tempdirectory,char *tapfile)
 
 	   }
 	}
+
+
+    if (!archivo_tzx_tiene_scr) {
+        //No tiene pantalla scr
+        //Agregamos preview de basic, si es que tiene basic
+        if (primer_bloque_basic[0]) {
+            //Generar pantalla de ese basic
+            char preview_scr_de_basic[PATH_MAX];
+            sprintf(preview_scr_de_basic,"%s.scr",primer_bloque_basic);
+            util_convert_o_p_p81_spec_basic_to_scr(primer_bloque_basic,preview_scr_de_basic);
+
+            char buff_preview_scr[PATH_MAX];
+            sprintf(buff_preview_scr,"%s/%s",tempdirectory,MENU_SCR_INFO_FILE_NAME);
+
+            //Meter en archivo MENU_SCR_INFO_FILE_NAME la ruta al archivo de pantalla
+            util_save_file((z80_byte *)preview_scr_de_basic,strlen(preview_scr_de_basic)+1,buff_preview_scr);
+        }
+    }
 
 
 	free(taperead);
